# machining-transpiler

./: .env.example  .gitignore  Cargo.toml  pack.sh
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: exporter.rs  lib.rs  util.rs
lib/src/exporter/: elumatec.rs  mod.rs
lib/src/exporter/elumatec/: tag.rs  variant.rs
templates/: elumatec
