[package]
name = "machining-transpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
dotenvy = "0.15"