[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde_json = "1.0"
human-sort = "0.2"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]
